test/sema/ambiguous-init-call-with-overloaded-params.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

struct Foo: Copyable {
    init(a: int) { }
    init(b: int) { }
}

void main() {
    // CHECK: [[@LINE+6]]:9: error: ambiguous reference to 'Foo.init'
    // CHECK: 4:5: note: candidate function:
    // CHECK-NEXT: init(a: int) { }
    // CHECK: 5:5: note: candidate function:
    // CHECK-NEXT: init(b: int) { }
    // CHECK-NOT: note
    _ = Foo(1)
}
